Theme Toggle Button Available

--- a/Padhale - Website for College/index.html
+++ b/Padhale - Website for College/index.html
@@ -37,7 +37,19 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link
+      id="style1"
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style.css"
+    />
+    <link
+      id="style2"
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/darkstyle.css"
+      disabled="disabled"
+    />
   </head>
 
   <body>
@@ -72,7 +84,9 @@
           </li> -->
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li>
-              <a class="getstarted scrollto" href="#about">Get Started</a>
+              <button id="theme-toggle" class="getstarted scrollto">
+                Toggle theme
+              </button>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -100,7 +114,9 @@
               journey towards Excellence!!
             </h2>
             <div class="d-flex justify-content-center justify-content-lg-start">
-              <a href="#features" class="btn-get-started scrollto">Direct kaam ki baat</a>
+              <a href="#features" class="btn-get-started scrollto"
+                >Direct kaam ki baat</a
+              >
               <a
                 href="https://www.youtube.com/watch?v=jDDaplaOz7Q"
                 class="glightbox btn-watch-video"
@@ -190,7 +206,10 @@
                   Isme itni kya khaas baat hai??
                 </h3>
                 <p>
-                  At Padhale, we're not just another educational platform; we're your gateway to academic success and collaborative learning. Here are some compelling reasons to make us your<br>go-to choice:
+                  At Padhale, we're not just another educational platform; we're
+                  your gateway to academic success and collaborative learning.
+                  Here are some compelling reasons to make us your<br />go-to
+                  choice:
                 </p>
               </div>
 
@@ -211,7 +230,10 @@
                       data-bs-parent=".accordion-list"
                     >
                       <p>
-                        Join a vibrant community of like-minded students who share knowledge, notes, and insights. Our platform fosters collaboration, making learning engaging and effective.
+                        Join a vibrant community of like-minded students who
+                        share knowledge, notes, and insights. Our platform
+                        fosters collaboration, making learning engaging and
+                        effective.
                       </p>
                     </div>
                   </li>
@@ -221,7 +243,7 @@
                       data-bs-toggle="collapse"
                       data-bs-target="#accordion-list-2"
                       class="collapsed"
-                      ><span>02</span>  Resource Abundance
+                      ><span>02</span> Resource Abundance
                       <i class="bx bx-chevron-down icon-show"></i
                       ><i class="bx bx-chevron-up icon-close"></i
                     ></a>
@@ -231,9 +253,9 @@
                       data-bs-parent=".accordion-list"
                     >
                       <p>
-                        Gain access to a wealth of study materials, resources, and expert insights. From comprehensive notes to exam tips, we've got your academic needs covered.
-
-
+                        Gain access to a wealth of study materials, resources,
+                        and expert insights. From comprehensive notes to exam
+                        tips, we've got your academic needs covered.
                       </p>
                     </div>
                   </li>
@@ -253,7 +275,9 @@
                       data-bs-parent=".accordion-list"
                     >
                       <p>
-                        Your success is our top priority. We continuously refine our platform based on user feedback and needs, ensuring you have the best possible experience.
+                        Your success is our top priority. We continuously refine
+                        our platform based on user feedback and needs, ensuring
+                        you have the best possible experience.
                       </p>
                     </div>
                   </li>
@@ -290,16 +314,17 @@
               data-aos="fade-left"
               data-aos-delay="100"
             >
-              <h3>
-                Hear What Others Say About Our Website
-              </h3>
-              <p class="fst-italic">
-                Don't just take our word for it. Discover what our users have to say about their experiences with Padhale.
+              <h3>Hear What Others Say About Our Website</h3>
+              <p class>
+                Don't just take our word for it. Discover what our users have to
+                say about their experiences with Padhale.
               </p>
 
               <div class="skills-content">
                 <div class="progress">
-                  <span class="skill">User Satisfaction <i class="val">98%</i></span>
+                  <span class="skill"
+                    >User Satisfaction <i class="val">98%</i></span
+                  >
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
@@ -312,7 +337,9 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">Academic Improvement <i class="val">90%</i></span>
+                  <span class="skill"
+                    >Academic Improvement <i class="val">90%</i></span
+                  >
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
@@ -325,7 +352,9 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">Collaboration Impact <i class="val">95%</i></span>
+                  <span class="skill"
+                    >Collaboration Impact <i class="val">95%</i></span
+                  >
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
@@ -338,7 +367,9 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">Recommendation <i class="val">94%</i></span>
+                  <span class="skill"
+                    >Recommendation <i class="val">94%</i></span
+                  >
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
@@ -379,7 +410,8 @@
                 <div class="icon"><i class="bx bxl-dribbble"></i></div>
                 <h4><a href="fun.html">Fun Zone</a></h4>
                 <p>
-                  Agar padhai krte krte thoda chill krne ka man ho jaye to yaha aapko aapke refreshment k liye saare options hai.
+                  Agar padhai krte krte thoda chill krne ka man ho jaye to yaha
+                  aapko aapke refreshment k liye saare options hai.
                 </p>
               </div>
             </div>
@@ -439,9 +471,15 @@
             <div class="col-lg-9 text-center text-lg-start">
               <h3>Become a Member of Our Team</h3>
               <p>
-                We believe that collaboration is the key to continuous improvement. Join us in shaping the future of Padhale and making it an even better platform for students. Whether you're a developer, designer, content creator, or simply have great ideas to share, we welcome you to be a part of our development team.
-                <br><br>
-                Together, we can enhance the educational experience and empower learners across the globe. Let's build something amazing, together!
+                We believe that collaboration is the key to continuous
+                improvement. Join us in shaping the future of Padhale and making
+                it an even better platform for students. Whether you're a
+                developer, designer, content creator, or simply have great ideas
+                to share, we welcome you to be a part of our development team.
+                <br /><br />
+                Together, we can enhance the educational experience and empower
+                learners across the globe. Let's build something amazing,
+                together!
               </p>
             </div>
             <div class="col-lg-3 cta-btn-container text-center">
@@ -535,7 +573,7 @@
       <!-- End Team Section -->
 
       <!-- ======= Frequently Asked Questions Section ======= -->
-      <section id="faq" class="faq section-bg" style="background-color: #fff;">
+      <section id="faq" class="faq section-bg">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Frequently Asked Questions</h2>
@@ -590,7 +628,9 @@
                   data-bs-parent=".faq-list"
                 >
                   <p>
-                    Just go to <strong>Features</strong> and then to <strong>Handwritten Notes</strong> section and then select the ones which you wanna download.
+                    Just go to <strong>Features</strong> and then to
+                    <strong>Handwritten Notes</strong> section and then select
+                    the ones which you wanna download.
                   </p>
                 </div>
               </li>
@@ -611,7 +651,12 @@
                   data-bs-parent=".faq-list"
                 >
                   <p>
-                    Yes yes...Ofcourse. Just mail them to any one of the team member with <strong>Subject</strong> as <strong>"Chapter name" notes</strong> or <strong>"Sem Subject Chapter Number" notes</strong> along with your name, year and branch. Proper credits will be given to each submission.
+                    Yes yes...Ofcourse. Just mail them to any one of the team
+                    member with <strong>Subject</strong> as
+                    <strong>"Chapter name" notes</strong> or
+                    <strong>"Sem Subject Chapter Number" notes</strong> along
+                    with your name, year and branch. Proper credits will be
+                    given to each submission.
                   </p>
                 </div>
               </li>
@@ -622,7 +667,8 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-4"
                   class="collapsed"
-                  >How Often Are the Study Materials Updated and Expanded? <i class="bx bx-chevron-down icon-show"></i
+                  >How Often Are the Study Materials Updated and Expanded?
+                  <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
                 <div
@@ -631,7 +677,10 @@
                   data-bs-parent=".faq-list"
                 >
                   <p>
-                    Jaise hi hame submission milte hai ham turant hi upload krne ki koshish krte hai. Aur jo hamare taraf se notes hai wo jaise hi class me chapter khtm hota hai uske 3-4 din baad upload ho jate hai.
+                    Jaise hi hame submission milte hai ham turant hi upload krne
+                    ki koshish krte hai. Aur jo hamare taraf se notes hai wo
+                    jaise hi class me chapter khtm hota hai uske 3-4 din baad
+                    upload ho jate hai.
                   </p>
                 </div>
               </li>
@@ -652,7 +701,8 @@
                   data-bs-parent=".faq-list"
                 >
                   <p>
-                    Nahi. It's completely free but if you want to help us you can always contact us for the same.
+                    Nahi. It's completely free but if you want to help us you
+                    can always contact us for the same.
                   </p>
                 </div>
               </li>
@@ -666,7 +716,6 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-
       <div class="footer-top">
         <div class="container">
           <div class="row">
