--- a/Padhale - Website for College/index.html
+++ b/Padhale - Website for College/index.html
@@ -82,7 +82,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li><a class="nav-link scrollto" href="#cta">Contact</a></li>
             <li>
               <button id="theme-toggle" class="getstarted scrollto">
                 Toggle theme
@@ -408,7 +408,7 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="fun.html">Fun Zone</a></h4>
+                <h4><a href="./fun.html" target="_blank">Fun Zone</a></h4>
                 <p>
                   Agar padhai krte krte thoda chill krne ka man ho jaye to yaha
                   aapko aapke refreshment k liye saare options hai.
@@ -423,7 +423,7 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-file"></i></div>
-                <h4><a href="notes.html">Hadwritten Notes</a></h4>
+                <h4><a href="./notes.html">Hadwritten Notes</a></h4>
                 <p>
                   Class me jo bhi padhaya gaya hai wo sb. Bas itna padh lo aur
                   pgir aur kuch padhne ki jaroorat nahi.
@@ -438,7 +438,7 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-tachometer"></i></div>
-                <h4><a href="playlists.html">Playlists</a></h4>
+                <h4><a href="./playlists.html">Playlists</a></h4>
                 <p>
                   Home-Work, Journal, Assignment likhte waqt agar kuch sun ne ka
                   man ho to inhe try kr skte ho.
@@ -453,7 +453,7 @@
             >
               <div class="icon-box">
                 <div class="icon"><i class="bx bx-layer"></i></div>
-                <h4><a href="books.html">Books and Resources</a></h4>
+                <h4><a href="./books.html">Books and Resources</a></h4>
                 <p>
                   Agar aur kuch padhne ki iccha ho to always you can check this!
                 </p>
