--- a/Padhale - Website for College/playlists.html
+++ b/Padhale - Website for College/playlists.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Handwritten Notes</title>
+    <title>Playlist</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -37,14 +37,26 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link
+      id="style1"
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style.css"
+    />
+    <link
+      id="style2"
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/darkstyle.css"
+      disabled="disabled"
+    />
   </head>
 
   <body>
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top header-inner-pages">
       <div class="container d-flex align-items-center">
-        <h1 class="logo me-auto"><a href="index.html">Padhale</a></h1>
+        <h1 class="logo me-auto"><a href="index.html">Padhle</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -72,7 +84,12 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li><a class="nav-link scrollto" href="#cta">Contact</a></li>
+            <li>
+              <button id="theme-toggle" class="getstarted scrollto">
+                Toggle theme
+              </button>
+            </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -97,63 +114,61 @@
       <section class="playlist">
         <div class="container">
           <p>
-            College life can be a whirlwind of assignments, exams, and late-night study sessions. But it doesn't have to be all work and no play. Our collection of curated playlists is here to add a touch of rhythm to your study routine. From groovy melodies to calming tunes, our playlists are perfect for college students looking to enhance their focus, boost productivity, and make studying more enjoyable. Give your study sessions a musical twist and discover the perfect soundtrack to your college journey.<br><br><br><br><br>
-          </p>  
-        
+            College life can be a whirlwind of assignments, exams, and
+            late-night study sessions. But it doesn't have to be all work and no
+            play. Our collection of curated playlists is here to add a touch of
+            rhythm to your study routine. From groovy melodies to calming tunes,
+            our playlists are perfect for college students looking to enhance
+            their focus, boost productivity, and make studying more enjoyable.
+            Give your study sessions a musical twist and discover the perfect
+            soundtrack to your college journey.<br /><br /><br /><br /><br />
+          </p>
+
           <div class="playlists">
             <div class="card">
-              <img src="./assets/img/team/#" alt="Playlist dp">
-              <h5 class="title1">Name : Name of playlist</h5>
-              <h5 class="title">Genre : Genre of songs in playlist</h5>
-              <h5 class="title">Recommended by : Name of person</h5>
+              <img src="./assets/img/90's.jpeg" alt="Playlist dp" />
+              <h5 class="title1">Bollywood Chronicles<br />[90s Edition]</h5>
+              <h5 class="title">Genre : Mixed</h5>
             </div>
             <div class="card">
-              <img src="./assets/img/team/#" alt="Playlist dp">
-              <h5 class="title1">Name : Name of playlist</h5>
-              <h5 class="title">Genre : Genre of songs in playlist</h5>
-              <h5 class="title">Recommended by : Name of person</h5>
+              <img src="./assets/img/bolly.jpg" alt="Playlist dp" />
+              <h5 class="title1">Bollywood's Timeless Treasures</h5>
+              <h5 class="title">Genre : Mixed</h5>
             </div>
             <div class="card">
-              <img src="./assets/img/team/#" alt="Playlist dp">
-              <h5 class="title1">Name : Name of playlist</h5>
-              <h5 class="title">Genre : Genre of songs in playlist</h5>
-              <h5 class="title">Recommended by : Name of person</h5>
+              <img src="./assets/img/fun.jpg" alt="Playlist dp" />
+              <h5 class="title1">Joyful Jams</h5>
+              <h5 class="title">Genre : Pop, Dance, Reggae</h5>
             </div>
             <div class="card">
-              <img src="./assets/img/team/#" alt="Playlist dp">
-              <h5 class="title1">Name : Name of playlist</h5>
-              <h5 class="title">Genre : Genre of songs in playlist</h5>
-              <h5 class="title">Recommended by : Name of person</h5>
+              <img src="./assets/img/eng.png" alt="Playlist dp" />
+              <h5 class="title1">English Delights: Ultimate Playlist</h5>
+              <h5 class="title">Genre : Mixed</h5>
             </div>
             <div class="card">
-              <img src="./assets/img/team/#" alt="Playlist dp">
-              <h5 class="title1">Name : Name of playlist</h5>
-              <h5 class="title">Genre : Genre of songs in playlist</h5>
-              <h5 class="title">Recommended by : Name of person</h5>
+              <img src="./assets/img/ghazals.jpg" alt="Playlist dp" />
+              <h5 class="title1">Ghazal Darbar: Timeless Poetry in Music</h5>
+              <h5 class="title">Genre : Contemporary, Sufi</h5>
             </div>
             <div class="card">
-              <img src="./assets/img/team/#" alt="Playlist dp">
-              <h5 class="title1">Name : Name of playlist</h5>
-              <h5 class="title">Genre : Genre of songs in playlist</h5>
-              <h5 class="title">Recommended by : Name of person</h5>
+              <img src="./assets/img/qawwali.jpg" alt="Playlist dp" />
+              <h5 class="title1">Qawwali Quarters: Spiritual Ecstasy</h5>
+              <h5 class="title">Genre : Qawwali</h5>
             </div>
             <div class="card">
-              <img src="./assets/img/team/#" alt="Playlist dp">
-              <h5 class="title1">Name : Name of playlist</h5>
-              <h5 class="title">Genre : Genre of songs in playlist</h5>
-              <h5 class="title">Recommended by : Name of person</h5>
+              <img src="./assets/img/dhh.jpg" alt="Playlist dp" />
+              <h5 class="title1">Lyrically Gifted: Rap Playlist</h5>
+              <h5 class="title">Genre : Hip-Hop</h5>
             </div>
             <div class="card">
-              <img src="./assets/img/team/#" alt="Playlist dp">
-              <h5 class="title1">Name : Name of playlist</h5>
-              <h5 class="title">Genre : Genre of songs in playlist</h5>
-              <h5 class="title">Recommended by : Name of person</h5>
+              <img src="./assets/img/sad.jpeg" alt="Playlist dp" />
+              <h5 class="title1">Tears of Time: Hindi Sad Songs</h5>
+              <h5 class="title">Genre : Bollywood</h5>
             </div>
             <div class="card">
-              <img src="./assets/img/team/#" alt="Playlist dp">
-              <h5 class="title1">Name : Name of playlist</h5>
-              <h5 class="title">Genre : Genre of songs in playlist</h5>
-              <h5 class="title">Recommended by : Name of person</h5>
+              <img src="./assets/img/lofi.jpeg" alt="Playlist dp" />
+              <h5 class="title1">Calm Canvas: Lo-Fi Masterpieces</h5>
+              <h5 class="title">Genre : Lo-fi, ChillPop</h5>
             </div>
           </div>
         </div>
