--- a/Padhale - Website for College/notes.html
+++ b/Padhale - Website for College/notes.html
@@ -37,14 +37,26 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link
+      id="style1"
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style.css"
+    />
+    <link
+      id="style2"
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/darkstyle.css"
+      disabled="disabled"
+    />
   </head>
 
   <body>
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top header-inner-pages">
       <div class="container d-flex align-items-center">
-        <h1 class="logo me-auto"><a href="index.html">Padhale</a></h1>
+        <h1 class="logo me-auto"><a href="index.html">Padhle</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -74,7 +86,9 @@
           </li> -->
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li>
-              <a class="getstarted scrollto" href="#about">Get Started</a>
+              <button id="theme-toggle" class="getstarted scrollto">
+                Toggle theme
+              </button>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -339,7 +353,7 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      <div class="footer-top" style="background-color: #f3f5fa">
+      <div class="footer-top">
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
