CSS updated slighlty

--- a/Padhale - Website for College/index.html
+++ b/Padhale - Website for College/index.html
@@ -56,7 +56,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <h1 class="logo me-auto"><a href="index.html">Padhale</a></h1>
+        <h1 class="logo me-auto"><a href="index.html">Padhle</a></h1>
 
         <nav id="navbar" class="navbar">
           <ul>
@@ -151,8 +151,8 @@
           <div class="row content">
             <div class="col-lg-6">
               <p>
-                Welcome to Padhale, your ultimate destination for collaborative
-                learning and academic excellence!<br /><br />At Padhale, we
+                Welcome to Padhle, your ultimate destination for collaborative
+                learning and academic excellence!<br /><br />At Padhle, we
                 believe that education is a journey best traveled together. Our
                 mission is to create a vibrant and supportive online community
                 where college students can come together, share knowledge, and
@@ -181,8 +181,8 @@
                 academic terrain, conquer challenges, and celebrate
                 achievements.<br /><br />
 
-                Thank you for being a part of the Padhale community. Let's
-                learn, grow, and succeed together!
+                Thank you for being a part of the Padhle community. Let's learn,
+                grow, and succeed together!
               </p>
               <a href="#features" class="btn-learn-more"
                 >Toh chaliye shuru krte hai</a
@@ -202,11 +202,11 @@
             >
               <div class="content">
                 <h3>
-                  <strong>Why to Choose Padhale?</strong>
+                  <strong>Why to Choose Padhle?</strong>
                   Isme itni kya khaas baat hai??
                 </h3>
                 <p>
-                  At Padhale, we're not just another educational platform; we're
+                  At Padhle, we're not just another educational platform; we're
                   your gateway to academic success and collaborative learning.
                   Here are some compelling reasons to make us your<br />go-to
                   choice:
@@ -317,7 +317,7 @@
               <h3>Hear What Others Say About Our Website</h3>
               <p class>
                 Don't just take our word for it. Discover what our users have to
-                say about their experiences with Padhale.
+                say about their experiences with Padhle.
               </p>
 
               <div class="skills-content">
@@ -472,7 +472,7 @@
               <h3>Become a Member of Our Team</h3>
               <p>
                 We believe that collaboration is the key to continuous
-                improvement. Join us in shaping the future of Padhale and making
+                improvement. Join us in shaping the future of Padhle and making
                 it an even better platform for students. Whether you're a
                 developer, designer, content creator, or simply have great ideas
                 to share, we welcome you to be a part of our development team.
@@ -720,7 +720,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Padhale</h3>
+              <h3>Padhle</h3>
               <p>
                 A project by the <br />
                 students of RCOEM<br />
@@ -799,7 +799,7 @@
 
       <div class="container footer-bottom clearfix">
         <div class="copyright">
-          &copy; Copyright <strong><span>Padhale</span></strong
+          &copy; Copyright <strong><span>Padhle</span></strong
           >. All Rights Reserved
         </div>
         <div class="credits">
