--- a/Padhale - Website for College/notes.html
+++ b/Padhale - Website for College/notes.html
@@ -357,7 +357,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Padhale</h3>
+              <h3>Padhle</h3>
               <p>
                 A project by the<br />
                 students of RCOEM<br />
@@ -436,7 +436,7 @@
 
       <div class="container footer-bottom clearfix">
         <div class="copyright">
-          &copy; Copyright <strong><span>Padhale</span></strong
+          &copy; Copyright <strong><span>Padhle</span></strong
           >. All Rights Reserved
         </div>
         <div class="credits">
