--- a/Padhale - Website for College/playlists.html
+++ b/Padhale - Website for College/playlists.html
@@ -129,46 +129,154 @@
               <img src="./assets/img/90's.jpeg" alt="Playlist dp" />
               <h5 class="title1">Bollywood Chronicles<br />[90s Edition]</h5>
               <h5 class="title">Genre : Mixed</h5>
+              <button
+                style="
+                  margin-top: 10px;
+                  border-radius: 20px;
+                  background-color: rgb(36, 208, 56);
+                  width: 150px;
+                  align-self: center;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Listen Now
+              </button>
             </div>
             <div class="card">
               <img src="./assets/img/bolly.jpg" alt="Playlist dp" />
               <h5 class="title1">Bollywood's Timeless Treasures</h5>
               <h5 class="title">Genre : Mixed</h5>
+              <button
+                style="
+                  margin-top: 10px;
+                  border-radius: 20px;
+                  background-color: rgb(36, 208, 56);
+                  width: 150px;
+                  align-self: center;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Listen Now
+              </button>
             </div>
             <div class="card">
               <img src="./assets/img/fun.jpg" alt="Playlist dp" />
               <h5 class="title1">Joyful Jams</h5>
               <h5 class="title">Genre : Pop, Dance, Reggae</h5>
+              <button
+                style="
+                  margin-top: 10px;
+                  border-radius: 20px;
+                  background-color: rgb(36, 208, 56);
+                  width: 150px;
+                  align-self: center;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Listen Now
+              </button>
             </div>
             <div class="card">
               <img src="./assets/img/eng.png" alt="Playlist dp" />
               <h5 class="title1">English Delights: Ultimate Playlist</h5>
               <h5 class="title">Genre : Mixed</h5>
+              <button
+                style="
+                  margin-top: 10px;
+                  border-radius: 20px;
+                  background-color: rgb(36, 208, 56);
+                  width: 150px;
+                  align-self: center;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Listen Now
+              </button>
             </div>
             <div class="card">
               <img src="./assets/img/ghazals.jpg" alt="Playlist dp" />
               <h5 class="title1">Ghazal Darbar: Timeless Poetry in Music</h5>
               <h5 class="title">Genre : Contemporary, Sufi</h5>
+              <button
+                style="
+                  margin-top: 10px;
+                  border-radius: 20px;
+                  background-color: rgb(36, 208, 56);
+                  width: 150px;
+                  align-self: center;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Listen Now
+              </button>
             </div>
             <div class="card">
               <img src="./assets/img/qawwali.jpg" alt="Playlist dp" />
               <h5 class="title1">Qawwali Quarters: Spiritual Ecstasy</h5>
               <h5 class="title">Genre : Qawwali</h5>
+              <button
+                style="
+                  margin-top: 10px;
+                  border-radius: 20px;
+                  background-color: rgb(36, 208, 56);
+                  width: 150px;
+                  align-self: center;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Listen Now
+              </button>
             </div>
             <div class="card">
               <img src="./assets/img/dhh.jpg" alt="Playlist dp" />
               <h5 class="title1">Lyrically Gifted: Rap Playlist</h5>
               <h5 class="title">Genre : Hip-Hop</h5>
+              <button
+                style="
+                  margin-top: 10px;
+                  border-radius: 20px;
+                  background-color: rgb(36, 208, 56);
+                  width: 150px;
+                  align-self: center;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Listen Now
+              </button>
             </div>
             <div class="card">
               <img src="./assets/img/sad.jpeg" alt="Playlist dp" />
               <h5 class="title1">Tears of Time: Hindi Sad Songs</h5>
               <h5 class="title">Genre : Bollywood</h5>
+              <button
+                style="
+                  margin-top: 10px;
+                  border-radius: 20px;
+                  background-color: rgb(36, 208, 56);
+                  width: 150px;
+                  align-self: center;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Listen Now
+              </button>
             </div>
             <div class="card">
               <img src="./assets/img/lofi.jpeg" alt="Playlist dp" />
               <h5 class="title1">Calm Canvas: Lo-Fi Masterpieces</h5>
               <h5 class="title">Genre : Lo-fi, ChillPop</h5>
+              <button
+                style="
+                  margin-top: 10px;
+                  border-radius: 20px;
+                  background-color: rgb(36, 208, 56);
+                  width: 150px;
+                  align-self: center;
+                  color: rgb(255, 255, 255);
+                "
+              >
+                Listen Now
+              </button>
             </div>
           </div>
         </div>
@@ -178,11 +286,11 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      <div class="footer-top" style="background-color: #f3f5fa">
+      <div class="footer-top">
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Padhale</h3>
+              <h3>Padhle</h3>
               <p>
                 A project by the<br />
                 students of RCOEM<br />
@@ -261,7 +369,7 @@
 
       <div class="container footer-bottom clearfix">
         <div class="copyright">
-          &copy; Copyright <strong><span>Padhale</span></strong
+          &copy; Copyright <strong><span>Padhle</span></strong
           >. All Rights Reserved
         </div>
         <div class="credits">
