--- a/Padhale - Website for College/books.html
+++ b/Padhale - Website for College/books.html
@@ -37,7 +37,19 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link
+      id="style1"
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/style.css"
+    />
+    <link
+      id="style2"
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/darkstyle.css"
+      disabled="disabled"
+    />
   </head>
 
   <body>
@@ -74,7 +86,9 @@
           </li> -->
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li>
-              <a class="getstarted scrollto" href="#about">Get Started</a>
+              <button id="theme-toggle" class="getstarted scrollto">
+                Toggle theme
+              </button>
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -100,79 +114,48 @@
       <section class="inner-page">
         <div class="container">
           <p>
-            Welcome to our Books section, a treasure trove of valuable knowledge and guidance for our college friends. We understand the importance of having the right reference materials to excel in your academic pursuits. Whether you're seeking textbooks, reference guides, or supplementary reading material, we've carefully curated a selection of must-have books that align with your college curriculum. Explore our recommendations to find the resources that will not only support your studies but also ignite your passion for learning. Let's embark on a journey of knowledge together, one book at a time.<br><br>
+            Welcome to our Books section, a treasure trove of valuable knowledge
+            and guidance for our college friends. We understand the importance
+            of having the right reference materials to excel in your academic
+            pursuits. Whether you're seeking textbooks, reference guides, or
+            supplementary reading material, we've carefully curated a selection
+            of must-have books that align with your college curriculum. Explore
+            our recommendations to find the resources that will not only support
+            your studies but also ignite your passion for learning. Let's embark
+            on a journey of knowledge together, one book at a time.<br /><br />
           </p>
-          <div class="notes-box">
+          <div class="book-box">
             <div class="theory">
               <h2 style="margin-left: 20px; font-size: x-large">
-                Computer Architecture [CAT202]
+                Semester 3 Books
               </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Suresh Balpande
-              </p>
             </div>
             <a
-              href="https://drive.google.com/file/d/1CjEmJU3g_XD79gmpIB10V5KVOYMzMnMM/view?usp=sharing"
+              href="https://drive.google.com/drive/folders/1G-Aynz-T0nrjRdQJ9RZL5hA2RrhJyoQV?usp=sharing"
               ><button>Dowload Kare !!</button></a
             >
           </div>
 
-          <div class="notes-box">
+          <div class="book-box">
             <div class="theory">
               <h2 style="margin-left: 20px; font-size: x-large">
-                Cyber Laws and Ethics in IT [HUT257]
+                Semester 2 Books
               </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Durgesh Sharma
-              </p>
             </div>
             <a
-              href="https://drive.google.com/file/d/1yPexFkeVRrQ-8PQQCNikft4RjB8xXh6z/view?usp=sharing"
+              href="https://drive.google.com/drive/folders/10fDduuiXfPfRunmKhuJxnP5WVOZ438de?usp=sharing"
               ><button>Dowload Kare !!</button></a
             >
           </div>
 
-          <div class="notes-box">
+          <div class="book-box">
             <div class="theory">
               <h2 style="margin-left: 20px; font-size: x-large">
-                Data Structures [CAT201]
+                Semester 1 Books
               </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Amit Pimpalkar
-              </p>
             </div>
             <a
-              href="https://drive.google.com/file/d/1ZlCn29eqRcsh8gvb9zkZD0CkPKIZr6lj/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Mathematics for Machine Learning [MAT271]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Prateek Lepse
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/file/d/1KMsI8JM3L7HZa4b8OnyuMAaZpxjYsp_Q/view?usp=sharing"
-              ><button>Dowload Kare !!</button></a
-            >
-          </div>
-
-          <div class="notes-box">
-            <div class="theory">
-              <h2 style="margin-left: 20px; font-size: x-large">
-                Operating System [CAT203]
-              </h2>
-              <p style="margin-left: 20px; padding-bottom: 10px">
-                As taught by Prof.Priya Parkhi
-              </p>
-            </div>
-            <a
-              href="https://drive.google.com/file/d/1MLtTu_NJOAvP7Qc6J8hxjY9II0dKF0ya/view?usp=sharing"
+              href="https://drive.google.com/drive/folders/1ZELfPmPjVrzDTqwbIen0o-le7iB4HsdU?usp=sharing  "
               ><button>Dowload Kare !!</button></a
             >
           </div>
@@ -183,7 +166,7 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
-      <div class="footer-top" style="background-color: #f3f5fa">
+      <div class="footer-top">
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
